// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test news reducer should get message about a problem with authentication 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about adding news to database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about modifying news in database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about news list's not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about news' adding fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about news' removing fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about news's modifying fail 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about removing news from database 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should get message about single news' not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "errorMessage": undefined,
  "news": Array [],
  "properNews": Object {},
}
`;

exports[`test news reducer should load a single news 1`] = `
Object {
  "_id": "1111-2222-3333-4444",
  "author": "tester",
  "category": "test-news",
  "content": "Zawartość wpisu testowego",
  "date": "01-01-2020",
  "errorMessage": "",
  "news": Array [],
  "properNews": undefined,
  "title": "Wpis testowy",
}
`;

exports[`test news reducer should load news list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "author": "tester",
    "category": "test-news",
    "content": "Zawartość wpisu testowego",
    "date": "01-01-2020",
    "title": "Wpis testowy",
  },
  "errorMessage": "",
  "news": undefined,
  "properNews": Object {},
}
`;
